# ChangeLog for dev-java/jtds
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jtds/ChangeLog,v 1.18 2007/07/16 00:00:18 betelgeuse Exp $

  15 Jul 2007; Petteri Räty <betelgeuse@gentoo.org> -jtds-0.9.1.ebuild,
  -jtds-1.0.3.ebuild:
  Removing old versions as nothing uses them any more.

  15 Jul 2007; nixnut <nixnut@gentoo.org> jtds-1.2-r2.ebuild:
  Stable on ppc wrt bug 182176

  17 Jun 2007; Christoph Mende <angelos@gentoo.org> jtds-1.2-r2.ebuild:
  Stable on amd64 wrt bug 182176

  17 Jun 2007; Christian Faulhammer <opfer@gentoo.org> jtds-1.2-r2.ebuild:
  stable x86, bug 182176

  16 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org> jtds-1.2-r2.ebuild:
  Added ~ppc, bug #175994

  09 Jun 2007; Petteri Räty <betelgeuse@gentoo.org> -jtds-1.2.ebuild,
  -jtds-1.2-r1.ebuild:
  Removed unused revisions.

  06 Jun 2007; Markus Rothe <corsair@gentoo.org> jtds-1.2-r2.ebuild:
  Added ~ppc64; bug #175994

*jtds-1.2-r2 (07 May 2007)

  07 May 2007; Petteri Räty <betelgeuse@gentoo.org>
  +files/1.2-com.sun.patch, +jtds-1.2-r2.ebuild:
  Use javax.net.ssl instead of com.sun.net.ssl. Now compiles with
  ibm-jdk-bin-1.5. Bug #175994.

*jtds-1.2-r1 (25 Apr 2007)

  25 Apr 2007; Petteri Räty <betelgeuse@gentoo.org> jtds-0.9.1.ebuild,
  jtds-1.0.3.ebuild, jtds-1.2.ebuild, +jtds-1.2-r1.ebuild:
  Migrate 1.2 to generation 2 and relax dev-java/jcifs dependency for 1.2.13
  version bump.

  18 Feb 2007; nixnut <nixnut@gentoo.org> jtds-0.9.1.ebuild:
  Stable on ppc wrt bug 160569

  20 Jan 2007; Markus Rothe <corsair@gentoo.org> jtds-0.9.1.ebuild:
  Added ~ppc64 (dep from dev-db/jxtray)

  04 Jan 2006; Petteri Räty <betelgeuse@gentoo.org> -jtds-1.0.2.ebuild:
  Removed old version.

*jtds-1.2 (03 Jan 2006)

  03 Jan 2006; Petteri Räty <betelgeuse@gentoo.org> +jtds-1.2.ebuild:
  Version bump. Fixes bugs #98106 and #114867. Put the new ebuild in
  SLOT 1.2 because japitools weren't happy about API compatibility.
