@@ -1,8 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST apache-ant-1.6.5-src.tar.bz2 6283500 RMD160 4680b53cd72d4915b9ca2bbe2131a71fcf505a84 SHA1 08e838c506ee580f5d220401a974c757ea80365d SHA256 f3ef501f06bf1dac88981038ebd5311c738bf2d50d220de85c3e6c7656169d59
-EBUILD ant-tasks-1.6.5-r4.ebuild 3423 RMD160 6a80b2086f1fdfbf484724303468c9ad4ffb9861 SHA1 75af0436249274568320c957dc1182e6e7d13015 SHA256 072f5fec48c8406670d7ce485b2b439cb07cebe86f1bc70290bb3b120294dd13
-MD5 4d39e613bb40e1c280158c5cc1bf8698 ant-tasks-1.6.5-r4.ebuild 3423
-RMD160 6a80b2086f1fdfbf484724303468c9ad4ffb9861 ant-tasks-1.6.5-r4.ebuild 3423
-SHA256 072f5fec48c8406670d7ce485b2b439cb07cebe86f1bc70290bb3b120294dd13 ant-tasks-1.6.5-r4.ebuild 3423
+EBUILD ant-tasks-1.6.5-r4.ebuild 3432 RMD160 f1cc44de605f3175f1ea84cc5a79c4f0c3675404 SHA1 9f6d517ee9db4bfea0d38e40a145ab318282132a SHA256 28033fdd909e6bbe8b69d575e273e27dd367ef06875248e2dcf6036569997d82
+MD5 a17d26c48d19b8f54b1e3b1c1a379baa ant-tasks-1.6.5-r4.ebuild 3432
+RMD160 f1cc44de605f3175f1ea84cc5a79c4f0c3675404 ant-tasks-1.6.5-r4.ebuild 3432
+SHA256 28033fdd909e6bbe8b69d575e273e27dd367ef06875248e2dcf6036569997d82 ant-tasks-1.6.5-r4.ebuild 3432
 EBUILD ant-tasks-1.7.0-r2.ebuild 3991 RMD160 96a0788097853338512aaf72587dff198dcee671 SHA1 e50e27475dc2b1bb03ba115c527dfaba593053aa SHA256 80f837cca99db720b4a31cc1487bf2221e522e715531ead00f3f022c4ca7f68c
 MD5 d8ff724701aa04119fdaf4892a200236 ant-tasks-1.7.0-r2.ebuild 3991
 RMD160 96a0788097853338512aaf72587dff198dcee671 ant-tasks-1.7.0-r2.ebuild 3991
@@ -15,10 +18,10 @@ EBUILD ant-tasks-1.7.0-r4.ebuild 3373 RMD160 023116db66e1aa133da7f5d03d8211071b4
 MD5 d40ca7f57dbc303efab28c028b12bc0d ant-tasks-1.7.0-r4.ebuild 3373
 RMD160 023116db66e1aa133da7f5d03d8211071b428df0 ant-tasks-1.7.0-r4.ebuild 3373
 SHA256 9f2f0fbf9e05cd9abd43fa2b006911c1b92243529b434f92a713107fe2219fc2 ant-tasks-1.7.0-r4.ebuild 3373
-MISC ChangeLog 16820 RMD160 4f59c5017be134e5de002bfc5b3b8f1b37dc0bba SHA1 533588a5461e20f963a5f7d8e7afe422f00e960f SHA256 686fadc4092132f88bfd3360a628692f32dfb127747e4c03116da11bb3e3211e
-MD5 fa7ee46488a292f757ce742f14bf2e91 ChangeLog 16820
-RMD160 4f59c5017be134e5de002bfc5b3b8f1b37dc0bba ChangeLog 16820
-SHA256 686fadc4092132f88bfd3360a628692f32dfb127747e4c03116da11bb3e3211e ChangeLog 16820
+MISC ChangeLog 16962 RMD160 fce0ab29a5c5cd7792d391873f495685e8eaac91 SHA1 3caf3eec9f7b30617539aef83713c4fcc1276e1b SHA256 7445cc21042cf7383f3d602c561991ba1e4443a363da6c12b7ded139baf92071
+MD5 1835a85abc25a1ebe836bcb8119fb000 ChangeLog 16962
+RMD160 fce0ab29a5c5cd7792d391873f495685e8eaac91 ChangeLog 16962
+SHA256 7445cc21042cf7383f3d602c561991ba1e4443a363da6c12b7ded139baf92071 ChangeLog 16962
 MISC metadata.xml 158 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 SHA1 77cd509a8b3c377b9a24480b48a5d5481b7874f1 SHA256 ea882ceccfd160b16cf7e79de423bdcc12b3fa000f124491a6df36f5783894fb
 MD5 123cf9440c1d4ac78f2caba1624765f9 metadata.xml 158
 RMD160 493079b5fb71d66863beea1b023901c90ba81be5 metadata.xml 158
@@ -35,3 +38,10 @@ SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/di
 MD5 d41d8cd98f00b204e9800998ecf8427e files/digest-ant-tasks-1.7.0-r4 0
 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 files/digest-ant-tasks-1.7.0-r4 0
 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855 files/digest-ant-tasks-1.7.0-r4 0
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHk9eccxLzpIGCsLQRAiiWAKCX6nm80Da5QDrHVTm+5cBITsTQHACfXDMC
+lAUWXBxmqtkMfG+8lGVD9PU=
+=Idh2
+-----END PGP SIGNATURE-----
