@@ -18,14 +18,14 @@ MD5 f3a1bea2ce8720ca91b3e2d813631ca9 files/buildxml-gentoo.patch 2919
 RMD160 09e8138ccf2b60bd797afbf11fa77f50c7e1cead files/buildxml-gentoo.patch 2919
 SHA256 ad850b2cc62eaf90163af5285044e359fda7baac582fca744135290d0a0c1b79 files/buildxml-gentoo.patch 2919
 DIST jtds-1.2-src.zip 3489215 RMD160 b7f79995090201af570239b5105d5ced030174f3 SHA1 3ed957b7f39f15f705e5f2940d4819521951b79f SHA256 60020866fec76fc246db5eaafc894a2348ac2d910139da8e9be91d23362d9b4e
-EBUILD jtds-1.2-r2.ebuild 1272 RMD160 f6b9c93f742a942360c78b18eeb96a0591b5f361 SHA1 97cb0a5b88adb0ee316cb4f9a50f6f205816d186 SHA256 85a035309e068d45985994bc23f481fa2fb3d40ce0b0bf4aea9641175490a5a8
-MD5 be5f2555aab0352410b9a47d82cae348 jtds-1.2-r2.ebuild 1272
-RMD160 f6b9c93f742a942360c78b18eeb96a0591b5f361 jtds-1.2-r2.ebuild 1272
-SHA256 85a035309e068d45985994bc23f481fa2fb3d40ce0b0bf4aea9641175490a5a8 jtds-1.2-r2.ebuild 1272
-MISC ChangeLog 2828 RMD160 966f7ad15b4fcbd2fcc4ac24ec70a486e4a99775 SHA1 989541fcdeb1b101e6930384ae1ce52404302206 SHA256 a899ebb8a07fca4333c136810478326be77cce6504156300835445a154f3cc2b
-MD5 e934542a08535b44ac43533ce67d6828 ChangeLog 2828
-RMD160 966f7ad15b4fcbd2fcc4ac24ec70a486e4a99775 ChangeLog 2828
-SHA256 a899ebb8a07fca4333c136810478326be77cce6504156300835445a154f3cc2b ChangeLog 2828
+EBUILD jtds-1.2-r2.ebuild 1279 RMD160 17069527ae25a6068e90f313f4c23da76b4cf19d SHA1 85d621eff3f10d3109164d48c6678ec36e4b8ed6 SHA256 f83282c0cd0e3d5522493341624c27e49d8fda3f71ada1f16281a8b31f5b14fb
+MD5 92199ce33a605b80f0a3346587dc22c7 jtds-1.2-r2.ebuild 1279
+RMD160 17069527ae25a6068e90f313f4c23da76b4cf19d jtds-1.2-r2.ebuild 1279
+SHA256 f83282c0cd0e3d5522493341624c27e49d8fda3f71ada1f16281a8b31f5b14fb jtds-1.2-r2.ebuild 1279
+MISC ChangeLog 2946 RMD160 5bfe1d6dc54452771dad22ae8e1f2bbd75ad01d6 SHA1 c0a41a04187c0953f2591e136bcdc751843ffb15 SHA256 15f0d2bf7eedb0c65f4ddf4968bc812d27a27589a3724cbda4db5452ac4e5f7c
+MD5 df4e7b6d50cbc0af0f094c9b6781c3e2 ChangeLog 2946
+RMD160 5bfe1d6dc54452771dad22ae8e1f2bbd75ad01d6 ChangeLog 2946
+SHA256 15f0d2bf7eedb0c65f4ddf4968bc812d27a27589a3724cbda4db5452ac4e5f7c ChangeLog 2946
 MISC metadata.xml 728 RMD160 394d832af5454401e1f5e382465b1e05d2367e98 SHA1 ba2c17315d21d6afe07a1739b8e180cd84db7a3a SHA256 3e7b67c3c3850d9f00d6c036ae8f77d1346462bbb479f4fb82a732976220a3a7
 MD5 18b4e0bc9665a646af0bec4688bad602 metadata.xml 728
 RMD160 394d832af5454401e1f5e382465b1e05d2367e98 metadata.xml 728
@@ -34,9 +34,9 @@ MD5 65195690fbb916cdb0855d4386d78a67 files/digest-jtds-1.2-r2 232
 RMD160 87453400508e3fcef8eefd6c7caa12303a03ee91 files/digest-jtds-1.2-r2 232
 SHA256 cdbec460ca437522dad0326270f0f5ed226518c75318147d4886e276d3a8a4eb files/digest-jtds-1.2-r2 232
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.4 (GNU/Linux)
+Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFGmrUQcxLzpIGCsLQRAmeFAJ0fdLQhr2HdVpidlMUGltQ7POhbhgCgncwk
-IeYdUaDoqTUKvCkCEKfWnS0=
-=elBC
+iD8DBQFHk9cbcxLzpIGCsLQRAogzAJwPxLM6cmQT7Jpmvh/R7rnWD8kM9gCdHmKN
+suW+2Ir7YG34FvLafDnu2J0=
+=dxcx
 -----END PGP SIGNATURE-----
